switched to Java 8